@@ -9,26 +9,25 @@ public class Main {
     public Main() {
 
         // ----------------------------------------------
-        int problemNumber = 36;
+        int problemNumber = 21;
         // ----------------------------------------------
 
         try {
             StringBuilder pN = new StringBuilder("" + problemNumber);
-            while (pN.length() < 4)
-                pN.insert(0, "0");
+            while (pN.length() < 4) pN.insert(0, "0");
 
             System.out.println("\033[4mProblem " + problemNumber + "\n\033[0m");
 
             BufferedReader br = new BufferedReader(new FileReader(new File("src/problem/description/problem_" + pN + ".txt")));
             String line;
-            while ((line = br.readLine()) != null)
-                System.out.println(line);
+            while ((line = br.readLine()) != null) System.out.println(line);
             br.close();
 
             System.out.println();
 
             long start_time = System.nanoTime();
-            Object solution = Class.forName("java_.solution.problem_" + pN + ".Problem").newInstance().getClass().getMethod("solve").invoke(null);
+            Object solution =
+                    Class.forName("java_.solution.problem_" + pN + ".Problem").getDeclaredConstructor().newInstance().getClass().getMethod("solve").invoke(null);
             long end_time = System.nanoTime() - start_time - 300000;
 
             System.out.println("Solution: " + solution);
@@ -37,7 +36,7 @@ public class Main {
 
         } catch (Exception e) {
             System.err.println("Problem not solved yet!");
-             e.printStackTrace();
+            e.printStackTrace();
         }
     }
 
@@ -48,8 +47,7 @@ public class Main {
     private String timeFormat(long l) {
         StringBuilder t = new StringBuilder(l + "");
 
-        while (t.length() < 11)
-            t.insert(0, 0);
+        while (t.length() < 11) t.insert(0, 0);
 
         for (int i = 8; i > 0; i -= 3)
             t = new StringBuilder(t.substring(0, i) + ":" + t.substring(i));
